--- a/public/frontend/css/header1.css
+++ b/public/frontend/css/header1.css
@@ -414,17 +414,18 @@
     background: #0f9040 none repeat scroll 0 0;
     box-shadow: 1px 2px 5px 2px rgba(0, 0, 0, 0.1);
     display: block;
-    padding: 20px 0 22px;
+    padding: 5px 0 5px;
     position: absolute;
     top: 0;
-    left: 35%;
+    left: 40%;
     transform: rotateX(90deg);
     transform-origin: center top 0;
     transition: all 0.5s ease 0s;
     visibility: hidden;
-    width: 250px;
+    width: 200px;
     z-index: 999;
     font-size: 14px;
+    border-radius: 6px;
   }
 
   .sub-ul-menu-fix li {
@@ -454,7 +455,7 @@
     background: #0f9040 none repeat scroll 0 0;
     box-shadow: 1px 2px 5px 2px rgba(0, 0, 0, 0.1);
     display: block;
-    padding: 20px 0 22px;
+    padding: 15px 0 15px;
     position: absolute;
     top: 100%;
     left: auto;
@@ -462,7 +463,8 @@
     transform-origin: center top 0;
     transition: all 0.5s ease 0s;
     visibility: hidden;
-    width: 300px;
+    width: 200px;
+    border-radius: 6px;
     z-index: 999;
 }
 
