--- a/public/frontend/css/header1.css
+++ b/public/frontend/css/header1.css
@@ -645,47 +645,42 @@ span.qty-cart {
 }
 
 .socail-zalo {
-    background: #0190f3 none repeat scroll 0 0;
-    bottom: 210px;
-    color: #ffffff;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 15px;
-    line-height: 40px;
-    position: fixed;
-    right: 12px;
-    text-align: center;
-    z-index: 9999;
-    border-radius: 20px;
-    padding: 0 18px;
+  bottom: 210px;
+  cursor: pointer;
+  display: flex;
+  border-radius: 100%;
+  position: fixed;
+  right: 12px;
+  z-index: 9999;
+  border-radius: 100%;
 }
 
-.socail-zalo a {
-    color: #fff;
+.socail-zalo a>img {
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+    background-color: #fff;
 }
 
 .socail-hotline {
     background: #0f9040 none repeat scroll 0 0;
-    bottom: 160px;
+    bottom: 150px;
     color: #ffffff;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 15px;
-    line-height: 40px;
     position: fixed;
     right: 12px;
+    height: 45px;
+    width: 45px;
     text-align: center;
     z-index: 9999;
-    border-radius: 20px;
-    padding: 0 18px;
+    border-radius: 100%;
 }
 
 .socail-hotline a {
-    color: #fff;
+  color: #fff
 }
 
 .cart-info_content h4 span {
