--- a/public/frontend/css/header1.css
+++ b/public/frontend/css/header1.css
@@ -310,8 +310,9 @@
   }
   
   .utility-nav {
-    background: #f8f9f9;
+    background: #0f9040;
     padding: 0.5rem 1rem;
+    color: #fff;
   }
   
   .utility-nav p {
@@ -470,18 +471,28 @@
 
 .sub-ul-menu-child {
     top: 15% !important;
-    right: -100%;
-    left: inherit;
+    right: 0;
+    left: 100%;
+    width: 550px;
 }
+
+.sub-ul-menu-child li .categoris_top {
+    text-transform: capitalize;
+    padding: 10px 15px;
+    font-size: 14px;
+    text-decoration: none;
+}
+
 .sub-ul-menu li {
 	position: relative;
 	padding: 5px 15px;
 }
 
-.sub-ul-menu li a {
+.sub-ul-menu li .menu-parent {
     padding: 10px 15px;
     text-decoration: none;
     font-size: 14px;
+    text-transform: uppercase;
 }
 
   ul.sub-ul-menu li:hover > a {
